[18:18:11.21 Tue 03/18/2025] Initial Commit 
------------------ Committed  to branch HEAD ------------------ 
 
[18:18:27.00 Tue 03/18/2025] Pushed to branch main 
 
[18:28:35.86 Tue 03/18/2025] remove preview feature 
------------------ Committed 7b4d77d to branch main ------------------ 
 
[18:28:54.90 Tue 03/18/2025] remove preview feature 
------------------ Committed 6e75e8e to branch main ------------------ 
 
[19:00:45.99 Tue 03/18/2025] organised the code (MVC) 
------------------ Committed 58bc086 to branch main ------------------ 
 
[19:00:57.06 Tue 03/18/2025] organised the code (MVC) 
------------------ Committed c62d876 to branch main ------------------ 
 
[20:04:24.35 Tue 03/18/2025] add instant preview with caching 
------------------ Committed d8ec162 to branch main ------------------ 
 
[21:09:33.59 Tue 03/18/2025] add expandable card to show preview; fix theme 
------------------ Committed d2eab82 to branch main ------------------ 
 
[21:09:44.34 Tue 03/18/2025] Pushed to branch main 
 