@@ -6,6 +6,9 @@
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
     margin-top: 0;
     overflow: hidden;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--md-sys-color-outline) var(--md-sys-color-surface-container);
 }
 
 .file-preview-content pre {
@@ -17,10 +20,30 @@
     font-size: 0.9em;
     line-height: 1.4;
     overflow-x: auto;
+    white-space: pre;
+}
+
+.file-preview-content::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+.file-preview-content::-webkit-scrollbar-track {
+    background: var(--md-sys-color-surface-container);
+    border-radius: 4px;
+}
+
+.file-preview-content::-webkit-scrollbar-thumb {
+    background: var(--md-sys-color-outline);
+    border-radius: 4px;
+}
+
+.file-preview-content::-webkit-scrollbar-corner {
+    background: transparent;
 }
 
 .file-item:hover .file-preview-content {
-    max-height: 300px;
+    max-height: 250px;
     opacity: 1;
     margin-top: 1em;
 }
