@@ -1,10 +1,18 @@
 /* Media queries for responsive design */
 
-/* Mobile and tablet styles */
+/* Tablet and smaller screens */
 @media (max-width: 768px) {
+    /* Header adjustments */
     header {
+        padding: 1em;
         flex-direction: column;
-        align-items: flex-start;
+        gap: 1em;
+        align-items: center;
+    }
+    
+    header h1 {
+        font-size: 1.5rem;
+        margin: 0;
     }
     
     nav ul {
@@ -14,19 +22,35 @@
     
     main {
         padding: 1em;
+        margin: 1em;
     }
     
+    /* File list display */
     #file-list {
+        padding: 0.5em;
         flex-wrap: wrap;
     }
     
+    /* File item adjustments */
     .file-item {
+        padding: 0.8em;
         flex-direction: column;
         align-items: flex-start;
     }
     
+    .file-item:hover {
+        padding: 1em;
+        margin: 0.1em 0;
+    }
+    
+    /* Preview content */
+    .file-item:hover .file-preview-content {
+        max-height: 200px;
+    }
+    
     .file-icon {
         margin-bottom: 0.5em;
+        font-size: 1.5em;
     }
     
     .file-action {
@@ -35,14 +59,88 @@
     }
 }
 
-/* Small screens */
+/* Mobile phones */
 @media (max-width: 480px) {
+    /* Header and layout */
     header h1 {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
     
     main {
-        padding: 0.5em;
+        padding: 0.8em;
+        margin: 0.8em;
+    }
+    
+    /* File items */
+    .file-item {
+        margin-bottom: 1em;
+        padding: 0.8em;
+    }
+    
+    .file-item-header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.75em;
+    }
+    
+    .file-details-group {
+        width: 100%;
+        margin-bottom: 0;
+    }
+    
+    .file-icon {
+        font-size: 1.8em;
+        margin-right: 0.5em;
+    }
+    
+    .file-details h3 {
+        font-size: 1.1em;
+        margin-bottom: 0.3em;
+    }
+    
+    .file-actions {
+        width: 100%;
+        padding-left: 0;
+        justify-content: space-between;
+    }
+    
+    /* Make buttons touch-friendly */
+    .file-action {
+        padding: 0.6em 1em;
+    }
+    
+    /* Improve button layout on mobile */
+    .action-stack {
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+        gap: 0.5em;
+    }
+    
+    .action-stack .file-action {
+        position: relative;
+        opacity: 1;
+        pointer-events: auto;
+        transform: none;
+        min-width: 90px;
+        text-align: center;
+    }
+    
+    /* Reduce text size slightly */
+    .file-details h3 {
+        font-size: 1em;
+    }
+    
+    .file-details p {
+        font-size: 0.8em;
+    }
+}
+
+/* Small height screens */
+@media (max-height: 600px) {
+    .file-item:hover .file-preview-content {
+        max-height: 150px;
     }
 }
 
@@ -50,5 +148,16 @@
 @media (min-width: 1200px) {
     main {
         max-width: 1400px;
+    }
+}
+
+/* Landscape orientation */
+@media (max-width: 768px) and (orientation: landscape) {
+    .file-item-header {
+        flex-direction: row;
+    }
+    
+    .file-actions {
+        justify-content: flex-end;
     }
 }
