@@ -23,3 +23,8 @@
  
 [21:09:44.34 Tue 03/18/2025] Pushed to branch main 
  
+[ 1:19:14.51 Wed 03/19/2025] fix theme 
+------------------ Committed 1a7607e to branch main ------------------ 
+ 
+[ 1:19:28.97 Wed 03/19/2025] Pushed to branch main 
+ 
